--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev ",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -15,8 +15,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
-    "typescript": "4.9.4",
-    "zustand": "^4.3.2"
+    "swr": "^2.0.3",
+    "typescript": "4.9.4"
   },
   "devDependencies": {
     "@types/node": "18.11.18",
