--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@next/font": "13.1.5",
     "firebase": "^9.16.0",
+    "framer-motion": "^9.0.7",
     "next": "13.1.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
