--- a/package.json
+++ b/package.json
@@ -9,22 +9,23 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@next/font": "13.1.5",
-    "firebase": "^9.16.0",
-    "framer-motion": "^9.0.7",
-    "next": "13.1.5",
+    "@next/font": "13.2.1",
+    "@supabase/supabase-js": "^2.10.0",
+    "firebase": "^9.17.1",
+    "framer-motion": "^10.0.0",
+    "next": "13.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
-    "swr": "^2.0.3",
-    "typescript": "4.9.4"
+    "swr": "^2.0.4",
+    "typescript": "4.9.5"
   },
   "devDependencies": {
-    "@types/node": "18.11.18",
-    "@types/react": "18.0.27",
-    "@types/react-dom": "18.0.10",
+    "@types/node": "18.14.1",
+    "@types/react": "18.0.28",
+    "@types/react-dom": "18.0.11",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.21",
-    "tailwindcss": "^3.2.4"
+    "tailwindcss": "^3.2.7"
   }
 }
