--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
     "swr": "^2.0.4",
-    "typescript": "4.9.5"
+    "typescript": "4.9.5",
+    "zustand": "^4.3.5"
   },
   "devDependencies": {
     "@types/node": "18.14.1",
