--- a/package.json
+++ b/package.json
@@ -9,15 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@next/font": "13.2.1",
     "@supabase/supabase-js": "^2.10.0",
-    "firebase": "^9.17.1",
+    "encoding": "^0.1.13",
     "framer-motion": "^10.0.0",
     "next": "13.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
-    "swr": "^2.0.4",
     "typescript": "4.9.5",
     "zustand": "^4.3.5"
   },
