--- a/package.json
+++ b/package.json
@@ -3,19 +3,24 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev ",
+    "dev": "next dev --turbo",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-scroll-area": "^1.0.2",
     "@supabase/supabase-js": "^2.10.0",
+    "class-variance-authority": "^0.4.0",
+    "clsx": "^1.2.1",
     "encoding": "^0.1.13",
-    "framer-motion": "^10.0.0",
+    "lucide-react": "^0.124.0",
     "next": "13.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
+    "tailwind-merge": "^1.10.0",
+    "tailwindcss-animate": "^1.0.5",
     "typescript": "4.9.5",
     "zustand": "^4.3.5"
   },
