--- a/package.json
+++ b/package.json
@@ -11,25 +11,26 @@
   "dependencies": {
     "@radix-ui/react-scroll-area": "^1.0.3",
     "@radix-ui/react-separator": "^1.0.2",
-    "@supabase/supabase-js": "^2.10.0",
-    "class-variance-authority": "^0.4.0",
+    "@supabase/supabase-js": "^2.20.0",
+    "class-variance-authority": "^0.5.2",
     "clsx": "^1.2.1",
     "encoding": "^0.1.13",
-    "lucide-react": "^0.125.0",
-    "next": "13.2.4",
+    "ioredis": "^5.3.1",
+    "lucide-react": "^0.144.0",
+    "next": "13.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tailwind-merge": "^1.10.0",
+    "swr": "^2.1.3",
+    "tailwind-merge": "^1.12.0",
     "tailwindcss-animate": "^1.0.5",
-    "typescript": "4.9.5",
-    "zustand": "^4.3.6"
+    "typescript": "5.0.4"
   },
   "devDependencies": {
-    "@types/node": "18.15.3",
-    "@types/react": "18.0.28",
+    "@types/node": "18.15.11",
+    "@types/react": "18.0.35",
     "@types/react-dom": "18.0.11",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.21",
-    "tailwindcss": "^3.2.7"
+    "tailwindcss": "^3.3.1"
   }
 }
