--- a/package.json
+++ b/package.json
@@ -12,11 +12,12 @@
     "@radix-ui/react-scroll-area": "^1.0.3",
     "@radix-ui/react-separator": "^1.0.2",
     "@supabase/supabase-js": "^2.20.0",
+    "axios": "^1.3.5",
     "class-variance-authority": "^0.5.2",
     "clsx": "^1.2.1",
     "encoding": "^0.1.13",
-    "ioredis": "^5.3.1",
-    "lucide-react": "^0.144.0",
+    "ioredis": "^5.3.2",
+    "lucide-react": "^0.161.0",
     "next": "13.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -30,7 +31,7 @@
     "@types/react": "18.0.35",
     "@types/react-dom": "18.0.11",
     "autoprefixer": "^10.4.14",
-    "postcss": "^8.4.21",
+    "postcss": "^8.4.22",
     "tailwindcss": "^3.3.1"
   }
 }
