--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "next": "13.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "server-only": "^0.0.1",
     "swr": "^2.1.3",
     "tailwind-merge": "^1.12.0",
     "tailwindcss-animate": "^1.0.5",
