--- a/package.json
+++ b/package.json
@@ -4,35 +4,38 @@
   "private": true,
   "scripts": {
     "dev": "next dev ",
+    "turbo": "next dev --turbo",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postinstall": "prisma generate"
   },
   "dependencies": {
-    "@radix-ui/react-scroll-area": "^1.0.3",
-    "@radix-ui/react-separator": "^1.0.2",
-    "@supabase/supabase-js": "^2.20.0",
-    "axios": "^1.3.5",
-    "class-variance-authority": "^0.5.2",
-    "clsx": "^1.2.1",
+    "@prisma/client": "5.2.0",
+    "@radix-ui/react-scroll-area": "^1.0.4",
+    "@radix-ui/react-separator": "^1.0.3",
+    "@supabase/supabase-js": "^2.33.0",
+    "axios": "^1.4.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.0.0",
     "encoding": "^0.1.13",
-    "ioredis": "^5.3.2",
-    "lucide-react": "^0.161.0",
-    "next": "13.3.0",
+    "lucide-react": "^0.268.0",
+    "next": "13.4.19",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "server-only": "^0.0.1",
-    "swr": "^2.1.3",
-    "tailwind-merge": "^1.12.0",
-    "tailwindcss-animate": "^1.0.5",
-    "typescript": "5.0.4"
+    "swr": "^2.2.1",
+    "tailwind-merge": "^1.14.0",
+    "tailwindcss-animate": "^1.0.6",
+    "typescript": "5.1.6"
   },
   "devDependencies": {
-    "@types/node": "18.15.11",
-    "@types/react": "18.0.35",
-    "@types/react-dom": "18.0.11",
-    "autoprefixer": "^10.4.14",
-    "postcss": "^8.4.22",
-    "tailwindcss": "^3.3.1"
+    "@types/node": "20.5.2",
+    "@types/react": "18.2.20",
+    "@types/react-dom": "18.2.7",
+    "autoprefixer": "^10.4.15",
+    "postcss": "^8.4.28",
+    "prisma": "^5.2.0",
+    "tailwindcss": "^3.3.3"
   }
 }
