--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,3 @@
 DATABASE_URL=postgres://user:password@host:port/database
+NEXT_PUBLIC_SUPABASE_URL=https://testuser.supabase.co
+NEXT_PUBLIC_SUPABASE_ANON_KEY=never.gonna.give-you-up
