--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "turbopack",
+  "name": "docket",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -8,34 +8,46 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "postinstall": "prisma generate"
+    "db:generate": "drizzle-kit generate",
+    "db:migrate": "drizzle-kit migrate",
+    "db:push": "drizzle-kit push",
+    "db:studio": "drizzle-kit studio"
   },
   "dependencies": {
-    "@prisma/client": "5.2.0",
+    "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-scroll-area": "^1.0.4",
     "@radix-ui/react-separator": "^1.0.3",
-    "@supabase/supabase-js": "^2.33.0",
-    "axios": "^1.4.0",
+    "@radix-ui/react-slot": "^1.0.2",
+    "@supabase/ssr": "latest",
+    "@supabase/supabase-js": "latest",
+    "@t3-oss/env-nextjs": "^0.10.1",
     "class-variance-authority": "^0.7.0",
-    "clsx": "^2.0.0",
-    "encoding": "^0.1.13",
-    "lucide-react": "^0.268.0",
+    "clsx": "^2.1.1",
+    "cmdk": "^1.0.0",
+    "dotenv": "^16.4.5",
+    "drizzle-orm": "^0.31.0",
+    "embla-carousel-react": "^8.1.3",
+    "esbuild": "^0.21.4",
+    "geist": "^1.3.0",
+    "lucide-react": "^0.383.0",
     "next": "13.4.19",
+    "postgres": "^3.4.4",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "server-only": "^0.0.1",
-    "swr": "^2.2.1",
-    "tailwind-merge": "^1.14.0",
-    "tailwindcss-animate": "^1.0.6",
-    "typescript": "5.1.6"
+    "react-dom": "^18",
+    "tailwind-merge": "^2.3.0",
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@types/node": "20.5.2",
-    "@types/react": "18.2.20",
-    "@types/react-dom": "18.2.7",
-    "autoprefixer": "^10.4.15",
-    "postcss": "^8.4.28",
-    "prisma": "^5.2.0",
-    "tailwindcss": "^3.3.3"
-  }
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "drizzle-kit": "^0.22.1",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.3",
+    "postcss": "^8",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5"
+  },
+  "packageManager": "bun@1.1.12"
 }
