--- a/package.json
+++ b/package.json
@@ -31,14 +31,19 @@
     "embla-carousel-react": "^8.1.3",
     "esbuild": "^0.21.4",
     "geist": "^1.3.0",
+    "highlight.js": "^11.9.0",
+    "lowlight": "^3.1.0",
     "lucide-react": "^0.383.0",
     "next": "latest",
+    "next-themes": "^0.3.0",
     "novel": "^0.4.2",
     "postgres": "^3.4.4",
     "react": "latest",
     "react-dom": "latest",
+    "sonner": "^1.4.41",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
+    "use-debounce": "^10.0.1",
     "zod": "^3.23.8"
   },
   "devDependencies": {
