--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "db:studio": "drizzle-kit studio"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.6.0",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.0.2",
@@ -42,6 +43,7 @@
     "postgres": "^3.4.4",
     "react": "latest",
     "react-dom": "latest",
+    "react-hook-form": "^7.51.5",
     "react-resizable-panels": "^2.0.19",
     "react-textarea-autosize": "^8.5.3",
     "sonner": "^1.4.41",
