--- a/package.json
+++ b/package.json
@@ -30,20 +30,14 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
-    "dotenv": "^16.4.5",
-    "drizzle-orm": "^0.31.2",
-    "embla-carousel-react": "^8.1.3",
     "esbuild": "^0.21.4",
     "geist": "^1.3.0",
     "highlight.js": "^11.9.0",
     "lowlight": "^3.1.0",
     "lucide-react": "^0.383.0",
-    "next": "latest",
     "next-themes": "^0.3.0",
     "novel": "^0.4.2",
     "postgres": "^3.4.4",
-    "react": "latest",
-    "react-dom": "latest",
     "react-hook-form": "^7.51.5",
     "react-resizable-panels": "^2.0.19",
     "react-textarea-autosize": "^8.5.3",
@@ -51,18 +45,20 @@
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "use-debounce": "^10.0.1",
-    "zod": "^3.23.8"
+    "zod": "^3.23.8",
+    "react": "^18",
+    "react-dom": "^18",
+    "next": "14.2.3"
   },
   "devDependencies": {
-    "@types/node": "^20.14.2",
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
-    "drizzle-kit": "^0.22.5",
-    "eslint": "^8.57.0",
-    "eslint-config-next": "14.2.3",
-    "postcss": "^8.4.38",
-    "tailwindcss": "^3.4.4",
-    "typescript": "^5.4.5"
+    "typescript": "^5",
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "postcss": "^8",
+    "tailwindcss": "^3.4.1",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.3"
   },
   "packageManager": "bun@1.1.12"
 }
