implement cloudflare image uploads

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,7 @@
 DATABASE_URL=postgres://user:password@host:port/database
 NEXT_PUBLIC_SUPABASE_URL=https://testuser.supabase.co
 NEXT_PUBLIC_SUPABASE_ANON_KEY=never.gonna.give-you-up
+# CLOUDFLARE_URL: process.env.CLOUDFLARE_URL,
+    # CLOUDFLARE_ACCESS_KEY: process.env.CLOUDFLARE_ACCESS_KEY,
+    # CLOUDFLARE_ACCESS_ID: process.env.CLOUDFLARE_ACCESS_ID,
+    # CLOUDFLARE_BUCKET_KEY: process.env.CLOUDFLARE_BUCKET_KEY,
