--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "postinstall": "prisma generate && prisma db push",
+    "postinstall": "prisma generate",
     "typecheck": " tsc --noEmit",
     "db:generate": "prisma generate",
     "db:migrate": "prisma migrate dev",
@@ -17,6 +17,8 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.4.1",
+    "@aws-sdk/client-s3": "^3.609.0",
+    "@aws-sdk/s3-request-presigner": "^3.609.0",
     "@hookform/resolvers": "^3.6.0",
     "@icons-pack/react-simple-icons": "^9.6.0",
     "@prisma/client": "5.16.1",
@@ -31,7 +33,9 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@t3-oss/env-nextjs": "^0.10.1",
     "@tailwindcss/typography": "^0.5.13",
+    "@vercel/blob": "^0.23.4",
     "autoprefixer": "^10.4.19",
+    "axios": "^1.7.2",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -41,6 +45,7 @@
     "highlight.js": "^11.9.0",
     "lowlight": "^3.1.0",
     "lucide-react": "^0.383.0",
+    "nanoid": "^5.0.7",
     "next": "15.0.0-rc.0",
     "next-auth": "^5.0.0-beta.19",
     "next-themes": "^0.3.0",
@@ -58,7 +63,9 @@
     "tailwindcss-animate": "^1.0.7",
     "use-debounce": "^10.0.1",
     "uuid": "^10.0.0",
-    "zod": "^3.23.8"
+    "zod": "^3.23.8",
+    "zsa": "^0.5.0",
+    "zsa-react": "^0.2.2"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
